[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Controls/PortUI.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.423529, 0.423529, 0.423529, 1 )

[node name="Port" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -880.0
margin_bottom = -525.0
rect_min_size = Vector2( 400, 200 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 400, 200 )
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 4.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 400.0
margin_bottom = 196.0

[node name="NameBox" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 396.0
margin_bottom = 24.0

[node name="NameLine" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/NameBox"]
margin_right = 196.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Controller"
align = 1

[node name="StatsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/NameBox"]
margin_left = 200.0
margin_top = 5.0
margin_right = 396.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Status: OK"
align = 1
valign = 1

[node name="HeaderBox" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 396.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 48 )

[node name="Port" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/HeaderBox"]
margin_right = 128.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="BaudRate" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/HeaderBox"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="AcceptButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HeaderBox"]
margin_left = 264.0
margin_right = 328.0
margin_bottom = 48.0
rect_min_size = Vector2( 64, 0 )
text = "Accept"

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HeaderBox"]
margin_left = 332.0
margin_right = 396.0
margin_bottom = 48.0
rect_min_size = Vector2( 64, 0 )
text = "Close"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 396.0
margin_bottom = 192.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ControlsBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]

[connection signal="text_entered" from="Panel/MarginContainer/VBoxContainer/HeaderBox/Port" to="." method="_on_Port_text_entered"]
[connection signal="text_entered" from="Panel/MarginContainer/VBoxContainer/HeaderBox/BaudRate" to="." method="_on_BaudRate_text_entered"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HeaderBox/AcceptButton" to="." method="_on_AcceptButton_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HeaderBox/CloseButton" to="." method="_on_CloseButton_pressed"]
